<resources>
    <string name="app_name">My Chat</string>
    <string name="password">password</string>
    <string name="sing_up">Sing up</string>
    <string name="email">Email</string>
    <string name="creat_new_accunt">creat new Accunt</string>
    <string name="user_name">User_name</string>
    <string name="log">log in</string>
    <string name="chat_app">Chat_App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmet">Chat</string>
    <string name="users">users</string>
    <string name="log_out">Log_out</string>
    <string name="todo">TODO</string>
    <string name="image">TODO</string>
    <string name="user">user_name</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="data">28jul / 2020 22:10 pm</string>
    <string name="textname">this name not username ,this name willbe visible to your Blogs contacts</string>
    <string name="blog">Blog</string>
    <string name="detliestext">TextViewgg gggtttttt ttttttttttt tttttttt tttttt ttttt tttttttttt</string>
</resources>
